--- a/text/xharmi00-bibliography.bib
+++ b/text/xharmi00-bibliography.bib
@@ -172,7 +172,7 @@
         with Infer.AI [online]
     },
     url = {https://fbinfer.com/downloads/pldi17-infer-ai-tutorial.pdf},
-    note = {PLDI 2017 [cit. 2019-05-03]}
+    note = {PLDI'17. 2017 [cit. 2019-05-03]}
 }
 
 @MISC{racerDOnline,
@@ -209,11 +209,12 @@
     },
     series = {POPL'09},
     year = {2009},
+    month = {January},
     ISBN = {978-1-60558-379-2},
     pages = {289\,--\,300},
     doi = {10.1145/1480881.1480917},
-    publisher = {ACM},
-    address = {New York, NY, USA}
+    publisher = {ACM, New York, NY, USA},
+    address = {Savannah, GA, USA}
 }
 
 @ARTICLE{racerD,
@@ -244,8 +245,7 @@
     ISBN = {0-89791-692-1},
     pages = {49\,--\,61},
     doi = {10.1145/199448.199462},
-    publisher = {ACM},
-    address = {New York, NY, USA}
+    publisher = {ACM, New York, NY, USA}
 }
 
 @INCOLLECTION{dataflowAnalysisApproaches,
@@ -324,6 +324,26 @@
     issn = {0018-9162},
     pages = {40\,--\,51},
     doi = {10.1109/2.161279}
+}
+
+@INPROCEEDINGS{deadlockKroening,
+    author = {
+        Kroening, Daniel and Poetzl, Daniel and Schrammel, Peter
+        and Wachter, Björn
+    },
+    title = {Sound static deadlock analysis for C/Pthreads},
+    booktitle = {
+        Proceedings of the 31st IEEE/ACM International Conference on
+        Automated Software Engineering
+    },
+    series = {ASE'16},
+    year = {2016},
+    pages = {379\,--\,390},
+    doi = {10.1145/2970276.2970309},
+    ISBN = {978-1-4503-3845-5},
+    month = {September},
+    publisher = {ACM, New York, NY, USA},
+    address = {Singapore, Singapore}
 }
 
 
